services/share/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: share
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
