services/share/deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: share
  name: share
  namespace: share
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: share
    spec:
      containers:
      - name: share
        image: php:apache
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 30
        volumeMounts:
        - mountPath: "/var/www/html"
          name: share-vol
      volumes:
        - name: share-vol
          persistentVolumeClaim:
            claimName: share
